--- a/src/sass/abstracts/_modal-card.scss
+++ b/src/sass/abstracts/_modal-card.scss
@@ -18,7 +18,7 @@
 }
 
 .modal-card {
-  max-width: 335px;
+  width: 335px;
   width: 100%;
   margin: 0 auto;
   padding: 24px 40px;
@@ -37,7 +37,7 @@
     max-width: 579px;
     padding: 40px;
     display: block;
-    height: 465px;
+    max-height: 501px;
   }
 
   @media screen and (min-width: $desktop) {
@@ -174,7 +174,7 @@
   margin: auto;
   display: block;
   min-width: 211px;
-  padding: 14px 28px;
+  padding: 14px 23px;
   background-color: $header-bgc-light;
   cursor: pointer;
 
@@ -221,3 +221,30 @@
 //   box-shadow: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15)) ;
 //     mix-blend-mode: luminosity ;
 // }
+
+.shopping-list-message {
+
+  margin-top: 8px;
+  margin-left: auto;
+  margin-right: auto;
+
+  font-family: 'DM Sans';
+
+font-weight: 400;
+font-size: 10px;
+line-height: 1.2;
+
+text-align: center;
+
+color: rgba(17, 17, 17, 0.5);
+
+@media screen and (min-width: $tablet) {
+  width: 324px;
+  letter-spacing: -0.04em;
+  font-size: 12px;
+  line-height: 1.1666;
+
+  width: 324px;
+
+}
+}
