--- a/src/sass/layout/main/_categories-list-list.scss
+++ b/src/sass/layout/main/_categories-list-list.scss
@@ -1,12 +1,11 @@
 .home__page-container {
   padding-top: 40px;
+  padding-bottom: 80px;
   width: 100%;
-  // @media screen and (min-width: $mobile) {
-  //     width: $mobile;
-  //   }
-
+  
   @media screen and (min-width: $tablet) {
     width: $tablet;
+    padding-bottom: 100px;
   }
 
   @media screen and (min-width: $desktop) {
@@ -29,7 +28,7 @@
 }
 .sidebar-container {
   width: 335px;
-  height: 228px;
+  height: 620px;
   width: 100%;
   /* полоса прокрутки (скроллбар) */
   ::-webkit-scrollbar {
@@ -48,8 +47,8 @@
   }
   @media screen and (min-width: $tablet) {
     // padding: 0 32px;
-
-    width: 337px;
+    display: flex;
+    gap: 32px;
     height: 472px;
   }
 
@@ -67,10 +66,6 @@
   width: 335px;
   height: 228px;
 
-  @media screen and (min-width: $mobile) {
-    //     width: $mobile;
-  }
-
   @media screen and (min-width: $tablet) {
     width: 337px;
     height: 472px;
@@ -80,7 +75,6 @@
     width: 356px;
     height: 472px;
 
-    // scroll-snap-type: y proximity;
   }
 }
 .categories__support {
@@ -116,15 +110,17 @@
   text-transform: uppercase;
 }
 
-/* .text {} */
 .conteiner__books {
   width: 100%;
-  padding-left: 40px;
+  padding-top: 40px;
+  
   @media screen and (min-width: $tablet) {
+    padding-top: 100px;
     padding-left: 0;
   }
 
   @media screen and (min-width: $desktop) {
+    padding-top: 0;
     padding-left: 33px;
   }
 }
@@ -132,11 +128,11 @@
   width: 100%;
 
   @media screen and (min-width: $tablet) {
-    padding-top: 100px;
+    padding-top: 0;
   }
 
   @media screen and (min-width: $desktop) {
-    padding-top: 0;
+    // padding-top: 0;
   }
 }
 
@@ -146,6 +142,7 @@
   line-height: 1.1875;
   letter-spacing: -0.04em;
   color: $primary-text-light;
+  margin: 0;
   @media screen and (min-width: $tablet) {
     font-size: 48px;
     line-height: 1.08;
@@ -164,19 +161,18 @@
   gap: 15px;
   // margin-left: auto;
   // margin-right: auto;
+  padding-top: 40px;
 }
 .books-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  // padding: 15px 15px;
+  
   gap: 15px;
   @media screen and (min-width: $tablet) {
     display: flex;
-    // justify-content: center;
-    flex-wrap: wrap;
-    // padding: 15px 15px;
-    gap: 25px;
+   flex-wrap: wrap;
+   gap: 25px;
   }
 
   @media screen and (min-width: $desktop) {
@@ -208,7 +204,16 @@
 
 .book-card__img-box {
   width: 100%;
-  height: 256px;
+  height: 485px;
+  @media screen and (min-width: $tablet) {
+        height: 316px;
+    }
+  
+    @media screen and (min-width: $desktop) {
+      height: 256px;
+  
+      // scroll-snap-type: y proximity;
+    }
 }
 
 .book-card__img {
