--- a/src/sass/layout/main/_support.scss
+++ b/src/sass/layout/main/_support.scss
@@ -10,6 +10,7 @@
   border-radius: 16px;
   @media screen and (min-width: $tablet) {
     height: 472px;
+    width: 335px;
   }
   @media screen and (min-width: $desktop) {
     width: 356px;
