--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,17 +31,20 @@
               </svg>  
             </button>
       </div>
-      <div class="munu-conteiner-call-to-registration">
-        <button class="call-to-registration-btn" id="signUpAuth"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
+      <div >
+
+        <ul class="munu-conteiner-call-to-registration">
+  <li><button class="call-to-registration-btn" id="signUpAuth"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
           <use href="/src/images/sprite.svg#icon-arrow-right"></use>
-          </svg></button>
-          <button class="logged-in__btn" id="userInAuth"> <svg class="logged-in__icon" width="37" height="37">
-            <use href="/src/images/sprite.svg#icon-user"></use>
-            </svg><span>Stephen</span><svg width="23" height="26"><use href="/src/images/sprite.svg#icon-Vector"></use></svg></button>
-          <!-- <h1>MUNU contaoner</h1> -->
-          <button class="log-out__btn" type="button" id="logOutAuth"><span>Log out</span><svg class="call-to-registration-btn__icon" width="20" height="20">
-            <use href="/src/images/sprite.svg#icon-arrow-right"></use>
-            </svg></button>
+          </svg></button></li>
+  <li><button class="logged-in__btn" id="userInAuth"> <svg class="logged-in__icon" width="37" height="37">
+          <use href="/src/images/sprite.svg#icon-user"></use>
+          </svg><span>Stephen</span><svg width="23" height="26"><use href="/src/images/sprite.svg#icon-Vector"></use>
+          </svg></button></li>
+  <li><button class="log-out__btn" type="button" id="logOutAuth"><span>Log out</span><svg class="call-to-registration-btn__icon" width="20" height="20">
+          <use href="/src/images/sprite.svg#icon-arrow-right"></use>
+          </svg></button></li>
+</ul>                
        </div>
     </div>
   </div>
@@ -50,8 +53,7 @@
 <div class="mobile-menu js-menu-container">
   <div class="mobile-menu__container">
     <div class="mobile-menu-logged-conteiner">
-
-      <button class="auth_button headers__bts" type="button" id="signUpAuthMobile"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
+      <button class="auth_button" type="button" id="signUpAuthMobile"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
         <use href="/src/images/sprite.svg#icon-arrow-right"></use>
         </svg></button>
 
