--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -22,8 +22,8 @@
   border-radius: 36px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header__btns {
-  display: flex;
+.call-to-registration-btn {
+  display: none;
   align-items: center;
   justify-content: space-between;
   padding: 15px 14px;
@@ -36,9 +36,12 @@
   font-size: 14px;
   line-height: 1.29;
   letter-spacing: -0.04em;
-}
-.call-to-registration-btn {
-  display: none;
+  border: none;
+  &:hover,
+  &:focus {
+    border: 1.5px solid $primary-bgc-light;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 .header-conteiner {
   background-color: #fff;
@@ -47,7 +50,7 @@
   padding: 20px 20px;
   position: relative;
   z-index: 100;
-  max-width: $tablet;
+  max-width: 100%;
 }
 .menu-conteiner-account {
   display: none;
@@ -127,6 +130,11 @@ input:checked + .slider:before {
 .nav-home-page {
   display: none;
   color: $primary-text-light;
+  align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.27;
+  letter-spacing: -0.04em;
 }
 .nav-shopping-page {
   display: none;
@@ -138,10 +146,47 @@ input:checked + .slider:before {
 }
 
 .logged-in__btn {
-  display: flex;
+  display: none;
   align-items: center;
   width: 184px;
   height: 45px;
+  justify-content: center;
+  gap: 9px;
+  padding: 15px 14px;
+  cursor: pointer;
+  background-color: $button-bgc;
+  color: $primary-text-dark;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.04em;
+  border: none;
+  border-radius: 18px;
+  &:hover,
+  &:focus {
+    border: 1.5px solid $primary-bgc-light;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+.log-out__btn {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 14px;
+  cursor: pointer;
+  width: 184px;
+  height: 45px;
+  background-color: #fff;
+  border-radius: 18px;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.04em;
+  border: 1.5px solid #111111;
+  &:hover,
+  &:focus {
+    border-color: 1px solid #202024;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 .navigation {
   align-items: center;
@@ -182,184 +227,212 @@ input:checked + .slider:before {
   }
 }
 
-@media screen and (max-width: 767px) {
-
-  .logo-name {
-    display: block;
-    margin-left: 8px;
-    margin-right: auto;
+.auth_button {
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 14px;
+  cursor: pointer;
+  width: 184px;
+  height: 45px;
+  background-color: $button-bgc;
+  border-radius: 18px;
+  color: $primary-text-dark;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.04em;
+  border: none;
+  &:hover,
+  &:focus {
+    border: 1.5px solid $primary-bgc-light;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-
-  .logOutAuthMobile {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 14px 24px;
-    border: 1.5px solid $primary-text-light;
-    border-radius: 18px;
-    gap: 4px;
-    position: absolute;
-    bottom: 20px;
+  border: 1.5px solid $primary-text-light;
+  &:hover,
+  &:focus {
+    border: 1.5px solid $primary-bgc-light;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .shoppingListButtonMobile {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: $primary-bgc-light;
-  }
-
-  .shoppingListButtonMobile-list {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  .shoppingListButtonMobile__link {
-    display: flex;
-    align-items: center;
-    color: $primary-bgc-light;
-  }
-
-  .shoppingListButtonMobile__icon {
-    fill: $primary-bgc-light;
-  }
-
-  .shoppingListButtonMobile__link:hover,
-  .shoppingListButtonMobile__link:focus {
-    color: $accent-text-light;
-  }
-
-  .shoppingListButtonMobile__icon:hover,
-  .shoppingListButtonMobile__icon:focus {
-    fill: $accent-text-light;
-  }
-
-  .homeButtonMobile__link:hover,
-  .homeButtonMobile__link:focus,
-  .homeButtonMobile__link:active {
-    color: $accent-text-light;
-    cursor: pointer;
-  }
-  .homeButtonMobile {
-    margin-bottom: 16px;
-  }
-
-
-  .shoppingListButtonMobile__icon {
-    height: 20px;
-    width: 20px;
-  }
-
-  .logged-in__btn,
-  .log-out__btn {
-    display: none;
-  }
-  .mobile-menu-logged-conteiner {
-    margin: 0 auto;
-    padding: 30px 0 20px;
-  }
-  .userInAuthMobile {
-    background: none;
-    display: flex;
-    align-items: center;
-    gap: 9px;
-    margin-bottom: 130px;
-
-    & span {
-      font-weight: 700;
-      font-size: 22px;
-      color: $header-bgc-light;
-      letter-spacing: -0.02em;
-    }
-  }
-  .shoppingListButtonMobile-list {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-content: center;
-    align-items: flex-start;
-  }
-  .userInAuthMobile__icon:hover,
-  .userInAuthMobile__icon:focus {
-    fill: $accent-text-light;
-  }
-
-  .burger {
-    position: relative;
-    width: 28px;
-    height: 28px;
-    padding: 4px;
-  }
-  .burger::before,
-  .burger::after {
-    content: '';
-    background-color: black;
-    position: absolute;
-    height: 2px;
-    left: 0;
-  }
-  .burger::before {
-    top: 7px;
-    width: 90%;
-  }
-  .burger::after {
-    bottom: 7px;
-    width: 70%;
-  }
-
-  .burger .burger__row {
-    position: absolute;
-    background-color: black;
-    left: 0;
-    width: 90%;
-    height: 2px;
-    top: 15px;
-  }
-  .burger span:last-child {
-    position: absolute;
-    background-color: black;
-    left: 0;
-    width: 70%;
-    height: 2px;
-    top: 11px;
-  }
-  .auth_button {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px 14px;
-    cursor: pointer;
-    width: 184px;
-    height: 45px;
-    background-color: $button-bgc;
-    border-radius: 18px;
-    color: $primary-text-dark;
-    font-size: 14px;
-    line-height: 1.29;
-    letter-spacing: -0.04em;
-    border: none;
-    &:hover,
-    &:focus {
-      border: 1.5px solid $primary-bgc-light;
-      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    border: 1.5px solid $primary-text-light;
-    &:hover,
-    &:focus {
-      border: 1.5px solid $primary-bgc-light;
-      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    .mobile-menu__wrapper {
-      margin-bottom: 25px;
-    }
-    .logged-in__btn {
-      display: none;
-    }
+  .mobile-menu__wrapper {
+    margin-bottom: 25px;
   }
 }
 
-// .call-to-registration-btn {
-//   display: none;
-// }
+.userInAuthMobile {
+  display: none;
+  background: none;
+  align-items: center;
+  gap: 9px;
+  margin-bottom: 130px;
+
+  & span {
+    font-weight: 700;
+    font-size: 22px;
+    color: $header-bgc-light;
+    letter-spacing: -0.02em;
+  }
+
+  &__icon:hover,
+  &__icon:focus {
+    fill: $accent-text-light;
+  }
+}
+.homeButtonMobile {
+  display: none;
+}
+.shoppingListButtonMobile {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  color: $primary-bgc-light;
+  &__icon {
+    fill: $primary-bgc-light;
+    height: 20px;
+    width: 20px;
+  }
+  &__link {
+    color: $header-bgc-light;
+    display: flex;
+    align-items: center;
+  }
+}
+.logOutAuthMobile {
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  padding: 14px 24px;
+  border: 1.5px solid $primary-text-light;
+  border-radius: 18px;
+  gap: 4px;
+  position: absolute;
+  bottom: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  .munu-conteiner-call-to-registration {
+    display: none;
+  }
+
+  .mobile-menu__logged-conteiner {
+    height: 100%;
+
+    &__container {
+      padding-left: 16px;
+      padding-right: 16px;
+      margin: 0 auto;
+      height: 100%;
+    }
+  }
+}
+.mobile-menu {
+  position: absolute;
+  top: 60;
+  left: 0;
+  width: 100%;
+  padding: 50px 20px 20px;
+  height: 100%;
+
+  background-image: url('/src/images/header/Group-imgs.png');
+  background-repeat: no-repeat;
+  background-position: 0 230;
+  background-size: contain;
+  background: $fonds-bgc;
+  // z-index: 5;
+  opacity: 0;
+  transform: translateY(-150%);
+  transition: transform 250ms cubic-bezier(0.12, 0.56, 0.79, 0.6),
+    opacity 1000ms ease-in;
+
+  &.open-menu {
+    transform: translateY(0);
+    opacity: 1;
+    z-index: 10;
+  }
+}
+
+.logOutAuthMobile {
+  display: flex;
+}
+.shoppingListButtonMobile-list {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.shoppingListButtonMobile {
+  display: flex;
+}
+.shoppingListButtonMobile:hover,
+.homeButtonMobile:hover {
+  color: $accent-text-light;
+  cursor: pointer;
+}
+
+.homeButtonMobile {
+  margin-bottom: 18px;
+  &__link {
+    color: $primary-text-light;
+  }
+}
+
+.logged-in__btn,
+.log-out__btn {
+  display: none;
+}
+
+.userInAuthMobile {
+  display: flex;
+}
+.shoppingListButtonMobile-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-content: center;
+  align-items: flex-start;
+}
+
+.burger {
+  position: relative;
+  width: 28px;
+  height: 28px;
+  padding: 4px;
+}
+.burger::before,
+.burger::after {
+  content: '';
+  background-color: black;
+  position: absolute;
+  height: 2px;
+  left: 0;
+}
+.burger::before {
+  top: 7px;
+  width: 90%;
+}
+.burger::after {
+  bottom: 7px;
+  width: 70%;
+}
+
+.burger .burger__row {
+  position: absolute;
+  background-color: black;
+  left: 0;
+  width: 90%;
+  height: 2px;
+  top: 15px;
+}
+.burger span:last-child {
+  position: absolute;
+  background-color: black;
+  left: 0;
+  width: 70%;
+  height: 2px;
+  top: 11px;
+}
+.auth_button {
+  display: flex;
+}
+
 @media screen and (min-width: $tablet) {
   .icon-close-menu {
     display: none;
@@ -390,11 +463,6 @@ input:checked + .slider:before {
   }
   .nav-home-page {
     display: flex;
-    align-items: center;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.27;
-    letter-spacing: -0.04em;
   }
   .logo-name {
     margin-right: 40px;
@@ -403,53 +471,15 @@ input:checked + .slider:before {
     margin-right: 24px;
   }
   .nav-shopping-page {
-    display: flex;
+    display: none;
     align-items: center;
     gap: 8px;
   }
   .call-to-registration-btn {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px 14px;
-    cursor: pointer;
-    width: 184px;
-    height: 45px;
-    background-color: $button-bgc;
-    border-radius: 18px;
-    color: $primary-text-dark;
-    font-size: 14px;
-    line-height: 1.29;
-    letter-spacing: -0.04em;
-    border: none;
-    &:hover,
-    &:focus {
-      border: 1.5px solid $primary-bgc-light;
-      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
   }
   .logged-in__btn {
-    position: absolute;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 9px;
-    padding: 15px 14px;
-    cursor: pointer;
-    width: 184px;
-    height: 45px;
-    background-color: $button-bgc;
-    border-radius: 18px;
-    color: $primary-text-dark;
-    font-size: 14px;
-    line-height: 1.29;
-    letter-spacing: -0.04em;
-    border: none;
-    &:hover,
-    &:focus {
-      border: 1.5px solid $primary-bgc-light;
-      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
   }
 
   .logged-in__btn span {
@@ -463,25 +493,7 @@ input:checked + .slider:before {
   }
 
   .log-out__btn {
-    position: absolute;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px 14px;
-    cursor: pointer;
-    width: 184px;
-    height: 45px;
-    background-color: #fff;
-    border-radius: 18px;
-    font-size: 14px;
-    line-height: 1.29;
-    letter-spacing: -0.04em;
-    border: 1.5px solid #111111;
-    &:hover,
-    &:focus {
-      border-color: 1px solid #202024;
-      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
   }
   .log-out__btn span {
     color: $primary-text-light;
@@ -491,6 +503,7 @@ input:checked + .slider:before {
     letter-spacing: -0.04em;
   }
 }
+
 @media screen and(min-width: $desktop) {
   .header-conteiner {
     padding: 14px 24px;
