--- a/src/sass/layout/main/_shopping-list.scss
+++ b/src/sass/layout/main/_shopping-list.scss
@@ -111,10 +111,12 @@
 
     margin-top: 40px;
     display: flex;
+    flex-direction: column;
     padding: 0;
     list-style: none;
     gap: 20px;
 }
+
 
 .card-shopping {
 
