--- a/src/sass/layout/main/_categories-list-list.scss
+++ b/src/sass/layout/main/_categories-list-list.scss
@@ -56,7 +56,7 @@
   }
 
   @media screen and (min-width: $desktop) {
-    flex-direction: column;
+    display: block;
     padding: 0;
     width: 356px;
     height: 472px;
