--- a/src/sass/layout/main/_mobile_menu.scss
+++ b/src/sass/layout/main/_mobile_menu.scss
@@ -5,12 +5,7 @@
   width: 100%;
   padding: 50px 20px 20px;
   height: 100%;
-  // background-image: url('/src/images/header/group.jpg');
-  // background-repeat: no-repeat;
-  // background-position: 0 230;
-  // background-size: contain;
   background: $fonds-bgc;
-  // z-index: 3;
   opacity: 0;
   transform: translateY(-150%);
   transition: transform 250ms cubic-bezier(0.12, 0.56, 0.79, 0.6),
@@ -28,4 +23,199 @@
   bottom: 0;
   width: 100%;
   left: 0;
+}
+
+.burger {
+  background-color: transparent;
+  //   display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.close-menu-btn {
+  background: none;
+}
+.icon-close-menu {
+  right: -10px;
+  bottom: 3px;
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  &:hover,
+  &:focus {
+    fill: $accent-text-light;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+.auth_button {
+  position: relative;
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 14px;
+  cursor: pointer;
+  width: 184px;
+  height: 45px;
+  background-color: $button-bgc;
+  border-radius: 18px;
+  color: $primary-text-dark;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.04em;
+  border: none;
+  &:hover,
+  &:focus {
+    border: 1.5px solid $primary-bgc-light;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  border: 1.5px solid $primary-text-light;
+  &:hover,
+  &:focus {
+    border: 1.5px solid $primary-bgc-light;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-menu__wrapper {
+    margin-bottom: 25px;
+  }
+}
+
+.userInAuthMobile {
+  display: none;
+  background: none;
+  align-items: center;
+  gap: 9px;
+  margin-bottom: 130px;
+
+  & span {
+    font-weight: 700;
+    font-size: 22px;
+    color: $header-bgc-light;
+    letter-spacing: -0.02em;
+  }
+
+  &__icon:hover,
+  &__icon:focus {
+    fill: $accent-text-light;
+  }
+}
+
+.homeButtonMobile {
+  display: none;
+}
+
+.shoppingListButtonMobile {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  color: $primary-bgc-light;
+  &__icon {
+    fill: $primary-bgc-light;
+    height: 20px;
+    width: 20px;
+  }
+  &__link {
+    color: $header-bgc-light;
+    display: flex;
+    align-items: center;
+  }
+}
+
+.logOutAuthMobile {
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  padding: 14px 24px;
+  border: 1.5px solid $primary-text-light;
+  border-radius: 18px;
+  gap: 4px;
+  position: absolute;
+  bottom: 20px;
+  background-color: $primary-text-dark;
+}
+
+// .logOutAuthMobile {
+//   display: flex;
+// }
+
+.shoppingListButtonMobile-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-content: center;
+  align-items: flex-start;
+}
+
+.shoppingListButtonMobile {
+  display: flex;
+}
+
+.shoppingListButtonMobile:hover,
+.homeButtonMobile:hover {
+  color: $accent-text-light;
+  cursor: pointer;
+}
+
+.homeButtonMobile {
+  margin-bottom: 18px;
+  &__link {
+    color: $primary-text-light;
+  }
+}
+
+.logged-in__btn,
+.log-out__btn {
+  display: none;
+}
+
+.userInAuthMobile {
+  display: flex;
+}
+
+.burger {
+  position: relative;
+  width: 28px;
+  height: 28px;
+  padding: 4px;
+}
+
+.burger::before,
+.burger::after {
+  content: '';
+  background-color: black;
+  position: absolute;
+  height: 2px;
+  left: 0;
+}
+
+.burger::before {
+  top: 7px;
+  width: 90%;
+}
+.burger::after {
+  bottom: 7px;
+  width: 70%;
+}
+
+.burger .burger__row {
+  position: absolute;
+  background-color: black;
+  left: 0;
+  width: 90%;
+  height: 2px;
+  top: 15px;
+}
+
+.burger span:last-child {
+  position: absolute;
+  background-color: black;
+  left: 0;
+  width: 70%;
+  height: 2px;
+  top: 11px;
+}
+
+.auth_button {
+  display: flex;
 }
