--- a/src/sass/layout/main/_best-books.scss
+++ b/src/sass/layout/main/_best-books.scss
@@ -1,3 +1,7 @@
+.best-sellers {
+    width: 100%;
+}
+
 .books_hero_title {
     margin: 0;
     font-family: DM Sans;
@@ -17,6 +21,7 @@
     padding-top: 40px;
     flex-direction: column;
 }
+
 
 .category_name {
     padding-bottom: 18px;
@@ -55,17 +60,6 @@ width: 335px;
     margin: 0;
     border-radius: 8px;
 }
-
-.category_name {
-    font-family: DM Sans;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0.03em;
-    text-align: left;
-}
-
-
 
 .info-author__item--main-page {
     padding-bottom: 8px;
@@ -169,7 +163,7 @@ width: 335px;
     }
 
     .books_list_category {
-        max-width: 996px;
+        max-width: 100%;
     }
 
     .books_row {
