--- a/src/partials/categories-list-list.html
+++ b/src/partials/categories-list-list.html
@@ -7,7 +7,6 @@
       </div>
     </aside>
     <div class="conteiner__books">
-      
       <div class="conteiner__books-box">
         <include src="./partials/best-selling-books.html"></include>
         <div class="name__categore-box"></div>
@@ -15,7 +14,7 @@
       </div>
       <button class="jumpUpBtn" id="jumpUpBtn" title="Go to top">
         <svg class="jumpup__icon" height="24" width="24">
-          <use href=".//../images/sprite.svg#icon-angle-down"></use>
+          <use href="./images/sprite.svg#icon-angle-down"></use>
         </svg>
       </button>
     </div>
