--- a/src/sass/abstracts/_modal-card.scss
+++ b/src/sass/abstracts/_modal-card.scss
@@ -209,39 +209,36 @@
     margin-bottom: 0px;
   }
 }
-
-.shopping-list-links_icon:hover,
-.shopping-list-links_icon:focus {
-  box-shadow: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
+.shopping-list-links_icon {
   mix-blend-mode: luminosity;
 }
 
-
+.shopping-list-links_icon:hover,
+.shopping-list-links_icon:focus {
+  filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
+}
 
 .shopping-list-message {
-
   margin-top: 8px;
   margin-left: auto;
   margin-right: auto;
 
   font-family: 'DM Sans';
 
-font-weight: 400;
-font-size: 10px;
-line-height: 1.2;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 1.2;
 
-text-align: center;
+  text-align: center;
 
-color: rgba(17, 17, 17, 0.5);
+  color: rgba(17, 17, 17, 0.5);
 
-@media screen and (min-width: $tablet) {
-  width: 324px;
-  letter-spacing: -0.04em;
-  font-size: 12px;
-  line-height: 1.1666;
+  @media screen and (min-width: $tablet) {
+    width: 324px;
+    letter-spacing: -0.04em;
+    font-size: 12px;
+    line-height: 1.1666;
 
-  width: 324px;
-
+    width: 324px;
+  }
 }
-}
-
