--- a/src/sass/layout/main/_dark.scss
+++ b/src/sass/layout/main/_dark.scss
@@ -86,6 +86,13 @@
   background-color: $primary-bgc-dark;
   color: #fff;
 }
+.dark .amazon-icon {
+  filter: invert(100%) hue-rotate(1deg) brightness(1000%) contrast(95%);
+}
+.dark .shopping-list-links_icon:hover,
+.dark .shopping-list-links_icon:focus {
+  filter: drop-shadow(0px 3px 3px rgba(255, 255, 255, 0.15));
+}
 
 // ---стилі темної теми на сторінку авторизації
 .dark .modalAuth-content {
@@ -150,4 +157,8 @@
 }
 .dark .shopping-list-message {
   color: $categories-text-dark;
+}
+.dark .card-shopping__listItem:hover,
+.dark .card-shopping__listItem:focus {
+  filter: drop-shadow(0px 3px 3px rgba(255, 255, 255, 0.15));
 }
