--- a/src/sass/layout/main/_shopping-list.scss
+++ b/src/sass/layout/main/_shopping-list.scss
@@ -265,6 +265,7 @@
   width: 16px;
   height: 16px;
 
+  @media screen and (min-width: $tablet) {
         width: 28px;
         height: 27px;      
     }
