--- a/src/sass/layout/main/_categories-list-list.scss
+++ b/src/sass/layout/main/_categories-list-list.scss
@@ -220,16 +220,40 @@
 .book-card__img-box {
   width: 100%;
   height: 485px;
+  border-radius: 8px;
+  position: relative;
+    overflow: hidden;
+
 
   @media screen and (min-width: $tablet) {
     height: 316px;
   }
-
-  // @media screen and (min-width: $desktop) {
-  //   height: 256px;
-
-  // scroll-snap-type: y proximity;
-  // }
+}
+.all-book-popup {
+  width: 100%;
+    height: 70px;
+    color: #111;
+    text-transform: uppercase;
+    background-color: #eac645;
+    transition: transform 250ms cubic-bezier(.4, 0, .2, 1);
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.29;
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: translateY(71px);
+    pointer-events: none;
+}
+.book-card__img-box:hover .all-book-popup {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0%);
 }
 
 .book-card__img {
