--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,3 +1,7 @@
+html,
+body {
+  width: 100%;
+}
 body {
   font-family: 'DM Sans', sans-serif;
   //   padding-left: 20px;
@@ -37,6 +41,3 @@ body {
 .visually-hidden {
   display: none;
 }
-
-
-
